fdo#56284 : soffice fails to start unless ~/.config exists and is writable

Try to create $HOME/.config if not present.
If present, check that it's a directory with RWX user permission

Change-Id: Icef558b2185ad7a7b3518d097f7b62a0b3344083